# creddit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  main.py  pyproject.toml  reddit-terminal.sh  requirements.txt  sample-reddit-api-output.json
.github/workflows/: codeql.yml  publish-pypi.yml
artifacts/: sample-subreddit-api-output.json
src/: read_config.py  readenv.py  reddit.py  terminal.py
src/creddit/: __init__.py  __main__.py  config.py  reddit.py  terminal.py
src/reddit_cli/: __main__.py  readenv.py  terminal.py
